comment links on news: comments on news post now have working links Posted by -> published by in news posts. I think this feels more accurate img max-width: 100% will avoid side scrolling on big images on small devices

--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ body {
 html, body {
   height: 100%; /* needed for container min-height */
 }
+
+img{
+	max-width: 100%;
+}
+
 #main_container
 {
 	position: relative; /* needed for footer positioning*/
